# kit-usd-agents

./: .gitattributes  CHANGELOG.md  QUICKSTART.md  README.md  premake5.lua
source/aiq/isaacsim_fns/: README.md  pyproject.toml
source/aiq/isaacsim_fns/docs/: ISAACSIM_FNS_DOCUMENTATION.md
source/aiq/isaacsim_fns/src/isaacsim_fns/: __init__.py  config.py  register_get_isaac_sim_extension_details.py  register_get_isaac_sim_instructions.py  register_search_isaac_sim_code_examples.py  register_search_isaac_sim_extensions.py  register_search_isaac_sim_settings.py
source/aiq/isaacsim_fns/src/isaacsim_fns/data/6.0/: VERSION.md
source/aiq/isaacsim_fns/src/isaacsim_fns/data/6.0/code_examples/: extension_analysis_summary.json
source/aiq/isaacsim_fns/src/isaacsim_fns/data/6.0/code_examples/code_examples_faiss/: index.faiss  index.json  metadata.json
source/aiq/isaacsim_fns/src/isaacsim_fns/data/6.0/code_examples/extracted_methods/: isaacsim.app.about.example.json  isaacsim.app.setup.example.json  isaacsim.asset.exporter.urdf.example.json  isaacsim.asset.gen.conveyor.example.json  isaacsim.asset.gen.conveyor.ui.example.json  isaacsim.asset.gen.omap.example.json  isaacsim.asset.gen.omap.ui.example.json  isaacsim.asset.importer.heightmap.example.json  isaacsim.asset.importer.mjcf.example.json  isaacsim.asset.importer.mjcf.ui.example.json  isaacsim.asset.importer.urdf.example.json  isaacsim.asset.importer.urdf.ui.example.json  isaacsim.asset.importer.utils.example.json  isaacsim.asset.transformer.example.json  isaacsim.asset.transformer.rules.example.json  isaacsim.asset.transformer.ui.example.json  isaacsim.asset.validation.example.json  isaacsim.benchmark.services.example.json  isaacsim.code_editor.jupyter.example.json  isaacsim.code_editor.vscode.example.json  isaacsim.core.api.example.json  isaacsim.core.cloner.example.json  isaacsim.core.deprecation_manager.example.json  isaacsim.core.experimental.materials.example.json  isaacsim.core.experimental.objects.example.json  isaacsim.core.experimental.prims.example.json  isaacsim.core.experimental.utils.example.json  isaacsim.core.nodes.example.json  isaacsim.core.prims.example.json  isaacsim.core.rendering_manager.example.json  isaacsim.core.simulation_manager.example.json  isaacsim.core.throttling.example.json  isaacsim.core.utils.example.json  isaacsim.core.version.example.json  isaacsim.cortex.behaviors.example.json  isaacsim.cortex.framework.example.json  isaacsim.examples.base.example.json  isaacsim.examples.browser.example.json  isaacsim.examples.extension.example.json  isaacsim.examples.interactive.example.json  (+69 more)
source/aiq/isaacsim_fns/src/isaacsim_fns/data/6.0/extensions/: extensions_database.json  extensions_summary.json
source/aiq/isaacsim_fns/src/isaacsim_fns/data/6.0/extensions/codeatlas/: isaacsim.app.about-2.2.0.codeatlas.json  isaacsim.app.setup-1.10.0.codeatlas.json  isaacsim.asset.exporter.urdf-1.4.3.codeatlas.json  isaacsim.asset.gen.conveyor-1.0.24.codeatlas.json  isaacsim.asset.gen.conveyor.ui-2.1.19.codeatlas.json  isaacsim.asset.gen.omap-2.2.1.codeatlas.json  isaacsim.asset.gen.omap.ui-2.5.0.codeatlas.json  isaacsim.asset.importer.heightmap-2.2.1.codeatlas.json  isaacsim.asset.importer.mjcf-3.2.0.codeatlas.json  isaacsim.asset.importer.mjcf.ui-1.1.0.codeatlas.json  isaacsim.asset.importer.urdf-3.2.1.codeatlas.json  isaacsim.asset.importer.urdf.ui-1.0.4.codeatlas.json  isaacsim.asset.importer.utils-1.1.1.codeatlas.json  isaacsim.asset.transformer-1.0.3.codeatlas.json  isaacsim.asset.transformer.rules-1.2.0.codeatlas.json  isaacsim.asset.transformer.ui-1.0.1.codeatlas.json  isaacsim.asset.validation-1.2.1.codeatlas.json  isaacsim.benchmark.services-4.1.3.codeatlas.json  isaacsim.code_editor.jupyter-1.1.3.codeatlas.json  isaacsim.code_editor.vscode-1.1.2.codeatlas.json  isaacsim.core.api-5.0.1.codeatlas.json  isaacsim.core.cloner-1.6.4.codeatlas.json  (+101 more)
source/aiq/isaacsim_fns/src/isaacsim_fns/data/6.0/instructions/: API_Documentation.md  Adding_and_Updating_Extensions_Guide.md  Application_Template.md  Asset_Structure.md  Browsers.md  Community_Project_Highlights.md  Data_Collection_Usage.md  Debugging_Profiling.md  Development_Tools.md  Digital_Twin.md  Examples.md  GUI_Reference.md  Glossary.md  Help_FAQ.md  Importers_and_Exporters.md  Installation.md  Isaac_Lab.md  Isaac_Sim_Assets.md  Isaac_Sim_Benchmarks.md  Isaac_Sim_Conventions.md  Isaac_Sim_Performance_Optimization_Handbook.md  Isaacsim_system.md  Keyboard_Shortcuts_Reference.md  Licenses.md  Omnigraph.md  Omniverse_Feedback_and_Forums.md  Omniverse_and_USD.md  Physics.md  Python_Scripting_and_Tutorials.md  Quick_Install.md  Quick_Tutorials.md  ROS_2.md  Reference_Architecture_and_Task_Groupings.md  Release_Notes.md  Renaming_Extensions_in_Isaac_Sim_4_5.md  Robot_Setup.md  Robot_Simulation.md  Sensors.md  Synthetic_Data_Generation.md  Templates.md  (+3 more)
source/aiq/isaacsim_fns/src/isaacsim_fns/data/6.0/settings/: setting_statistics.json  setting_summary.json  setting_summary_simple.json
source/aiq/isaacsim_fns/src/isaacsim_fns/functions/: __init__.py  get_extension_details.py  get_instructions.py  search_code_examples.py  search_extensions.py  search_settings.py
source/aiq/isaacsim_fns/src/isaacsim_fns/services/: __init__.py  code_search_service.py  embedder_service.py  extension_service.py  kit_exts_atlas.py  settings_service.py  telemetry.py
source/aiq/isaacsim_fns/src/isaacsim_fns/utils/: __init__.py  fuzzy_matching.py  input_sanitization.py  usage_logging.py
source/aiq/isaacsim_fns/tests/: test_get_extension_details.py  test_get_instructions.py  test_search_code_examples.py  test_search_extensions.py  test_search_settings.py
source/mcp/isaacsim_mcp/: .gitignore  Dockerfile  README.md  build-docker.bat  build-docker.sh  check_mcp_health.py  pyproject.toml  run.bat  run.sh  setup-dev.bat  setup-dev.sh  start-server.bat
source/mcp/isaacsim_mcp/docs/: README.md  architecture.md  prompt_arch.md  settings_architecture.md
source/mcp/isaacsim_mcp/src/isaacsim_mcp/: __init__.py  __main__.py
source/mcp/isaacsim_mcp/workflows/: config.yaml
(+593 files in other folders)
