[tool.poetry]
name = "isaacsim-fns"
version = "2.0.1"
description = "Isaac Sim functions for NVIDIA Omniverse Isaac Sim development - providing Isaac Sim extension information, APIs, code examples, and application templates (NAT-compatible)"
authors = ["NVIDIA Omniverse"]
readme = "README.md"
homepage = "https://github.com/NVIDIA-Omniverse/kit-usd-agents"
repository = "https://github.com/NVIDIA-Omniverse/kit-usd-agents"
documentation = "https://github.com/NVIDIA-Omniverse/kit-usd-agents"
keywords = ["omniverse", "ai", "tools", "code-generation", "aiq", "functions", "isaac", "sim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "isaacsim_fns", from = "src"}]
include = [
    "src/isaacsim_fns/data/**/*",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
# NAT dependencies - allow pre-releases
nvidia-nat = {version = ">=1.4.0rc3", allow-prereleases = true}
nvidia-nat-langchain = {version = ">=1.4.0rc3", allow-prereleases = true}
# LangChain dependencies
langchain = ">=1.2.6"
langchain-community = ">=0.3.31"
langchain-core = ">=0.3.80"
langchain-nvidia-ai-endpoints = ">=1.0.2"
# Vector search and HTTP dependencies
faiss-cpu = ">=1.7.0"
requests = ">=2.25.0"
httpx = ">=0.24.0"
# Configuration support
pyyaml = ">=6.0"
# Telemetry support
redis = {extras = ["hiredis"], version = ">=4.5.0"}
# Transitive dependencies
grpcio = ">=1.76.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

# Entry points for Isaac Sim functions - Dual registration for AIQ and NAT compatibility
# AIQ entry points (backwards compatibility)
[tool.poetry.plugins."aiq.components"]
isaacsim_fns_get_isaac_sim_instructions = "isaacsim_fns.register_get_isaac_sim_instructions"
isaacsim_fns_search_isaac_sim_extensions = "isaacsim_fns.register_search_isaac_sim_extensions"
isaacsim_fns_get_isaac_sim_extension_details = "isaacsim_fns.register_get_isaac_sim_extension_details"
isaacsim_fns_search_isaac_sim_code_examples = "isaacsim_fns.register_search_isaac_sim_code_examples"
isaacsim_fns_search_isaac_sim_settings = "isaacsim_fns.register_search_isaac_sim_settings"

# NAT entry points (native)
[tool.poetry.plugins."nat.components"]
isaacsim_fns_get_isaac_sim_instructions = "isaacsim_fns.register_get_isaac_sim_instructions"
isaacsim_fns_search_isaac_sim_extensions = "isaacsim_fns.register_search_isaac_sim_extensions"
isaacsim_fns_get_isaac_sim_extension_details = "isaacsim_fns.register_get_isaac_sim_extension_details"
isaacsim_fns_search_isaac_sim_code_examples = "isaacsim_fns.register_search_isaac_sim_code_examples"
isaacsim_fns_search_isaac_sim_settings = "isaacsim_fns.register_search_isaac_sim_settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=isaacsim_fns --cov-report=term-missing"
asyncio_mode = "auto"